--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.MentalHealth"
         tools:targetApi="31">
         <activity
+            android:name=".HomePage_Activity"
+            android:exported="false"
+            android:label="@string/title_activity_home_page" />
+        <activity
             android:name=".Registrasi_Activity"
             android:exported="false" />
         <activity
