--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.MentalHealth"
         tools:targetApi="31">
         <activity
-            android:name=".splash.SplashActivity"
+            android:name=".LupaPwActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ResetPwActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DetailProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".HomePage_Activity"
