UI beranda & list psikolog

--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MentalHealth"
         tools:targetApi="31">
         <activity
+            android:name=".ui.PsikologActivity"
+            android:exported="false" />
+        <activity
             android:name=".LupaPwActivity"
             android:exported="false" />
         <activity
