--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,13 +18,13 @@
             android:name=".ui.PsikologActivity"
             android:exported="false" />
         <activity
-            android:name=".LupaPwActivity"
+            android:name=".ui.LupaPwActivity"
             android:exported="false" />
         <activity
-            android:name=".ResetPwActivity"
+            android:name=".ui.ResetPwActivity"
             android:exported="false" />
         <activity
-            android:name=".DetailProfileActivity"
+            android:name=".ui.DetailProfileActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.SplashActivity"
@@ -37,14 +39,14 @@
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".HomePage_Activity"
+            android:name=".ui.HomePage_Activity"
             android:exported="false"
             android:label="@string/title_activity_home_page" />
         <activity
-            android:name=".Registrasi_Activity"
+            android:name=".ui.Registrasi_Activity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="false" />
     </application>
 
