--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,13 +15,19 @@
         android:theme="@style/Theme.MentalHealth"
         tools:targetApi="31">
         <activity
+            android:name=".ui.quest.QuestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.quest.optional.QuestionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.PsikologActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.LupaPwActivity"
+            android:name=".ui.password.LupaPwActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.ResetPwActivity"
+            android:name=".ui.password.ResetPwActivity"
             android:exported="false" />
         <activity
             android:name=".ui.profile.DetailProfileActivity"
