--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -42,14 +42,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.auth.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".ui.home.HomePage_Activity"
             android:exported="false"
             android:label="@string/title_activity_home_page" />
         <activity
-            android:name=".ui.registrasi.Registrasi_Activity"
+            android:name=".ui.auth.registrasi.Registrasi_Activity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
