--- a/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
+++ b/Capstone Project/Mental Health/app/src/main/AndroidManifest.xml
@@ -18,13 +18,16 @@
         android:theme="@style/Theme.MentalHealth"
         tools:targetApi="31">
         <activity
+            android:name=".ui.DoctorActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.quest.DetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.quest.QuestActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.PsikologActivity"
+            android:name=".ui.psikolog.PsikologActivity"
             android:exported="false" />
         <activity
             android:name=".ui.password.LupaPwActivity"
@@ -66,10 +69,8 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-        </provider>
-
-        <!-- Trigger Google Play services to install the backported photo picker module. -->
-        <!--suppress AndroidDomInspection -->
+        </provider> <!-- Trigger Google Play services to install the backported photo picker module. -->
+        <!-- suppress AndroidDomInspection -->
         <service
             android:name="com.google.android.gms.metadata.ModuleDependencies"
             android:enabled="false"
@@ -78,6 +79,7 @@
             <intent-filter>
                 <action android:name="com.google.android.gms.metadata.MODULE_DEPENDENCIES" />
             </intent-filter>
+
             <meta-data
                 android:name="photopicker_activity:0:required"
                 android:value="" />
